--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,6 +7,7 @@ dependencies = [
     "matplotlib>=3.9.2",
     "numpy>=2.1.2",
     "pillow>=10.4.0",
+    "plotly>=5.24.1",
     "scipy>=1.14.1",
     "streamlit>=1.39.0",
 ]
